# RustyBox

./: .gitignore  Cargo.toml  Dockerfile  Kconfig  LICENSE  Makefile  README.md  build.rs  build_rootfs.sh  genfeatures.py  reduced_sh_grammar.txt  requirements.txt  test_script.sh
src/: error.rs  io_util.rs  main.rs  safe_libc.rs  yes.rs
src/utils/: _false.rs  _true.rs  basename.rs  cat.rs  echo.rs  false.rs  mkdir.rs  mod.rs  pwd.rs  rm.rs  rmdir.rs  sh.rs  test.rs  touch.rs  true.rs  yes.rs
src/utils/sh/: ast_nodes.rs  error.rs  expansions.rs  mod.rs  parser.rs  tokenizer.rs
tests/: common.rs  test_basename.rs  test_echo.rs  test_false.rs  test_sh.rs  test_true.rs
