[package]
name = "rustybox"
version = "0.0.1"
edition = "2021"
authors = ["Stephen Lynch <stepheng.lynch@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/stephenglynch/RustyBox"

[features]
default = ["all"]
all = [
    "basename-util",
    "cat-util",
    "echo-util",
    "false-util",
    "mkdir-util",
    "pwd-util",
    "rm-util",
    "rmdir-util",
    "sh-util",
    "touch-util",
    "true-util",
    "yes-util",
]
basename-util = []
cat-util = []
echo-util = []
false-util = []
mkdir-util = []
pwd-util = []
rm-util = []
rmdir-util = []
sh-util = []
touch-util = []
true-util = []
yes-util = []

[dependencies]
pico-args = { version = "0.5.0", features = ["combined-flags"] }
nom = "7.1.1"
libc = "0.2"
nix = "0.26.2"
lazy_static = "1.4.0"
log = "0.4.17"
stderrlog = "0.5.4"

[dev-dependencies]
assert_cmd = "2.0.4"

[build-dependencies]
regex = "1.6.0"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
strip = true
